--- a/theory/README
+++ b/theory/README
@@ -4,5 +4,7 @@ NEXT FEATURES:
 - support many different scales (copy the scales i have from the other app (code somwehre hopefully))
 - BPM slider
 - roman numeral notation vs chord notation (vs number notation) clickbox
+- different drum beats
+- melody generation over it somehow!?
 - better song UI, maybe so that there are like slots for each beat of the song and the chords just fill it in. and then its in like 4/4 or whatever
 - then i can support non-trad time signatures
